<resources>
    <string name="app_name">Makta</string>

    <!--Bottom navigation titles-->

    <!-- Borrowed books fragment title -->
    <string name="title_borrowed_books_view">Borrowed</string>
    <!-- Lent Books Fragment title -->
    <string name="title_lent_books_view">Lent</string>
    <!-- Book search fragment title-->
    <string name="title_book_search_view">Search</string>
    <!-- User Profile Fragment View-->
    <string name="title_user_profile_view">Profile</string>
    <string name="book_request">Book Request</string>
    <string name="wish_list">Wish List</string>
    <string name="my_boooks">My Boooks</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no_borrowed_books">No Borrowed Books</string>
    <string name="no_lent_books">No Lent Books</string>
    <string name="settings">Settings</string>
    <string name="add_book">Add Book</string>
    <string name="no_books">You Have No Books</string>
    <string name="wish_list_empty">Wish List Empty</string>
    <string name="no_book_requests">No Book Requests</string>
    <!--Book Entry Hints-->
    <string name="author">Author</string>
    <string name="book_description">Book Description</string>
    <string name="publish_date">Select Publish Date</string>
    <string name="book_edition">Book Edition</string>
    <string name="author_validate_error">Please Enter A Valid Author Name</string>
    <string name="description_validate_error">Please Enter A Valid Description</string>
    <string name="title">Title</string>
    <string name="prompt_valid_data">Please Enter Valid Book Data</string>
    <string name="title_validate_error">Please Enter A Valid Title</string>
    <string name="publish_validate_error">Please Enter A Valid Publish Date</string>
    <string name="edition_valiate_error">Please Enter A Valid Edition</string>
    <string name="date_validate_error">Date Selected is Not Correct</string>
    <string name="success_book_added">Book Added</string>
    <string name="published">Published:</string>
    <string name="edition">Edition:</string>
    <string name="description">Description:</string>
    <string name="share_book">Share Book</string>
    <string name="enter_book_name_hint">Enter Book Name</string>
    <string name="no_book_found">No Book Found</string>
    <string name="request_for_book">Request For Book</string>
</resources>
