<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Profile View-->
        <LinearLayout
            android:id="@+id/container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_username"
                style="@style/Theme.MaktaApp.ProfileText"
                tools:text="David Odari" />

            <TextView
                android:id="@+id/text_view_email"
                style="@style/Theme.MaktaApp.ProfileText"
                tools:text="davidkibzodari@gmail.com" />

            <TextView
                android:id="@+id/text_view_location"
                style="@style/Theme.MaktaApp.ProfileText"
                tools:text="Nairobi,Kenya" />
        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:background="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/container_profile" />

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/separator">
            <!--Book Request-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_book_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/book_request" />
            </android.support.v7.widget.CardView>

            <!--My Books-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_my_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/my_boooks" />
            </android.support.v7.widget.CardView>

            <!--WishList-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_wish_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/wish_list" />
            </android.support.v7.widget.CardView>
            <!--WishList-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/settings" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/purple_500"
            android:text="@string/sign_out"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/profile_container" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>