<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_view_detail_title"
        style="@style/BookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="The Crew" />

    <TextView
        android:id="@+id/text_view_detail_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/text_view_detail_title"
        app:layout_constraintRight_toRightOf="@+id/text_view_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_detail_title"
        tools:text="Thomas Plump" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        android:elevation="4dp"
        app:cardCornerRadius="2dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_detail_author">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_description_title"
                style="@style/Theme.MaktaApp.BookDetailTextTitle"
                android:text="@string/description" />

            <TextView
                android:id="@+id/text_view_detail_description"
                style="@style/TextViewStyle"
                tools:text="A group of strangers find themselves framed in a murder case and find a way to sort the mess" />

            <TextView
                android:id="@+id/text_view_published_title"
                style="@style/Theme.MaktaApp.BookDetailTextTitle"
                android:text="@string/published" />

            <TextView
                android:id="@+id/text_view_detail_published"
                style="@style/TextViewStyle"
                tools:text="12/12/2019" />

            <TextView
                android:id="@+id/text_view_edition_title"
                style="@style/Theme.MaktaApp.BookDetailTextTitle"
                android:text="@string/edition" />

            <TextView
                android:id="@+id/text_view_detail_edition"
                style="@style/TextViewStyle"
                tools:text="1st" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</merge>